Add windows support

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: go
 os:
   - linux
   - osx
-  # - windows
+  - windows
 
 go:
   - 1.14.x
@@ -16,7 +16,7 @@ go:
   - 1.7.x
   - tip
 
-before_install:
+before_script:
   - go get -t -v ./...
 
 script:
