Fix cross compilation stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,8 @@ jobs:
 
     - stage: cross compilation
       script:
-        - GOOS=linux go build
-        - GOOS=darwin go build
-        - GOOS=freebsd go build
-        - GOOS=windows go build
-        - GOARCH=386 go build
+        - GOOS=linux go build ./...
+        - GOOS=darwin go build ./...
+        - GOOS=freebsd go build ./...
+        - GOOS=windows go build ./...
+        - GOARCH=386 go build ./...
