chore: upgrade github actions to v3 and golangci-lint to v1.46.2

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -11,3 +11,11 @@ linters:
     - nolintlint
     - ifshort
     - varnamelen
+    - exhaustruct
+    - nonamedreturns
+
+    # Deprecated
+    - maligned
+    - scopelint
+    - golint
+    - interfacer
