--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,11 +4,22 @@ jobs:
   build:
     strategy:
       matrix:
-        go-version: [1.13.x, 1.14.x, 1.15.x, 1.16.x, 1.17.x, 1.18.x, 1.19.x, 1.20.x]
+        go-version:
+          [
+            1.13.x,
+            1.14.x,
+            1.15.x,
+            1.16.x,
+            1.17.x,
+            1.18.x,
+            1.19.x,
+            1.20.x,
+            1.21.x,
+          ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
       - run: go version
