chore: upgrade golangci lint  1.56.2

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -13,9 +13,14 @@ linters:
     - varnamelen
     - exhaustruct
     - nonamedreturns
+    - depguard
 
     # Deprecated
     - maligned
     - scopelint
     - golint
     - interfacer
+    - varcheck
+    - structcheck
+    - deadcode
+    - nosnakecase
