chore(lint): upgrade to v2.0.2

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,8 +1,7 @@
+version: "2"
 linters:
-  fast: false
-  enable-all: true
+  default: all
   disable:
-    - gomnd
     - gochecknoglobals
     - testpackage
     - paralleltest
@@ -14,6 +13,57 @@ linters:
     - mnd
     - copyloopvar
     - intrange
-
-    # deprecated
-    - execinquery
+  settings:
+    gocritic:
+      disabled-checks:
+        - deferInLoop
+        - importShadow
+        - sloppyReassign
+        - unnamedResult
+        - whyNoLint
+      enabled-tags:
+        - diagnostic
+        - experimental
+        - opinionated
+        - performance
+        - style
+    govet:
+      disable:
+        - fieldalignment
+        - shadow
+      enable-all: true
+    lll:
+      line-length: 130
+    revive:
+      rules:
+        - name: indent-error-flow
+        - name: use-any
+  exclusions:
+    generated: lax
+    presets:
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    rules:
+      - linters:
+          - lll
+        path: _test\.go
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+issues:
+  max-issues-per-linter: 0
+  max-same-issues: 0
+formatters:
+  enable:
+    - gci
+    - gofmt
+    - gofumpt
+    - goimports
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
